--- a/web/templates/equipment.html
+++ b/web/templates/equipment.html
@@ -85,7 +85,7 @@
 
         <div>
             <h2>Category</h2>
-            {{ cat }}
+            {{ category }}
         </div>
 
         {% if equipment['fee'] %}
