--- a/web/templates/equipment.html
+++ b/web/templates/equipment.html
@@ -77,6 +77,9 @@
             <ul style="list-style-type: none;">
                 <li>{{ equipment['contact']['name'] }}</li>
                 <li>{{ equipment['contact']['title'] }}</li>
+                {% if equipment['contact']['email'] %}
+                    <li>{{ equipment['contact']['email']}}</li>
+                {% endif %}
                 {% if equipment['contact']['tel'] %}
                     <li>{{ equipment['contact']['tel']}}</li>
                 {% endif %}
