added help page content and logged recent changes

--- a/web/templates/developer.html
+++ b/web/templates/developer.html
@@ -35,7 +35,7 @@
         </div>
 
         <div>
-            <h2>Update (May 13)</h2>
+            <h2>Update May 13</h2>
             <ul>
                 <li>Bugs Chasing</li>
                 <li>UI Revamp</li>
@@ -46,24 +46,37 @@
         </div>
 
         <div>
-            <h2>Update (Jun 21)</h2>
+            <h2>Update Jun 21</h2>
             <ul>
                 <li>Bugs Chasing</li>
                 <li>Fixed search functions</li>
                 <li>Help page</li>
                 <li>Feedback button</li>
-                <li>Customizable categories</li>
             </ul>
         </div>
 
         <div>
+            <h2>Update Sep 29</h2>
+            <ul>
+                <li>Various bug fixes</li>
+                <li>UI adjustment: navbar, equipment page, edit page, page number in search</li>
+                <li>Help page: user system and equipment editing</li>
+                <li>User registration system</li> 
+                <li>Customizable categories</li>
+                <li>Code documentations</li>
+            </ul>
+        </div>
+
+
+        <div>
             <h2>Todo</h2>
             <ul>
-                <li>With these databases, we should be welcoming of input from users. It could be that we didn’t know that a particular machine or technique can be used with a particular material, or vice-versa. Can you add something that allows users to suggest changes or modifications on each page?</li>
-                <li>More bug fixes...</li>
-                <li>User Registration</li>
                 <li>Mobile UI</li>
-                <li>Documentations</li>
+                <li>Password retrieval</li>
+                <li>Edit user information</li>
+                <li>Email confirmation system</li>
+                <li>Integrate into official websites</li>
+                <li>Maintenance guide for future developers</li>
                 <li>...</li>
             </ul>
         </div>
