--- a/web/templates/user.html
+++ b/web/templates/user.html
@@ -58,6 +58,13 @@
         </ul>
     </div>
 
+
+
+</div>
+
+<div class="help-feedback">
+    <a id="help" href='mailto:zqiu@uchicago.edu?subject=PME Equipment Database Feedback'>Feedback</a>
+    <a id="feedback" href='/help#help-user'>Help</a>
 </div>
 
 
