updated developer log

--- a/web/templates/developer.html
+++ b/web/templates/developer.html
@@ -59,11 +59,19 @@
             <h2>Update Sep 29</h2>
             <ul>
                 <li>Various bug fixes</li>
+                <ul>
+                    <li>Fixed new equipment database operation</li>
+                    <li>Put categories in database and fixed dropdown</li>
+                    <li>Fixed equipment deletion</li>
+                    <li>Fixed feature and application dynamic input name</li>
+                    <li>Fixed category selection interface</li>
+                    <li>Removed test files from repository</li>
+                </ul>
                 <li>UI adjustment: navbar, equipment page, edit page, page number in search</li>
                 <li>Help page: user system and equipment editing</li>
                 <li>User registration system</li> 
                 <li>Customizable categories</li>
-                <li>Code documentations</li>
+                <li>Improved code documentations</li>
             </ul>
         </div>
 
@@ -72,10 +80,10 @@
             <h2>Todo</h2>
             <ul>
                 <li>Mobile UI</li>
-                <li>Password retrieval</li>
-                <li>Edit user information</li>
+                <li>Password retrieval function</li>
+                <li>User information editing page</li>
                 <li>Email confirmation system</li>
-                <li>Integrate into official websites</li>
+                <li>Hosting options/hostname</li>
                 <li>Maintenance guide for future developers</li>
                 <li>...</li>
             </ul>
